# Project_SwiftScout

./: LICENSE  README.md  setup_instructions.md
.github/workflows/: run-unit-test-and-upload-codecov.yml
results/: Final_AIP_Plan.xlsx  Screencast from 12-11-2024 01:19:24 AM.webm
src/multi_robot/: CMakeLists.txt  package.xml
src/sar/: compile_commands.json
src/sar/include/: goals.hpp  search.hpp
src/sar/src/: goals.cpp  search.cpp
src/sar/test/: CMakeLists.txt  main.cpp
src/swift_scout/: CMakeLists.txt  compile_commands.json  package.xml
src/swift_scout/launch/: bringup_launch.py  localization_launch.py  main_backup.launch.py  navigation2.launch.py  rviz.launch.py  scout_backup_launch.py  scout_launch.py  spawn_turtlebot3.launch.py  swift_scout_main.launch copy.py  swift_scout_spawn.launch copy.py
src/swift_scout/model/turtlebot3_waffle/: model.sdf
src/swift_scout/scripts/: generate_coverage_report.bash
src/swift_scout/src/: goal_publisher.cpp  scout.cpp  scout_backup.cpp  simple_implementation.cpp
src/swift_scout/test/: basic_test.cpp
src/swift_scout/urdf/: red_box.urdf
src/swift_scout/worlds/: person.world
